# soul-protocol

./: .gitignore  CONTRIBUTING.md  DEVLOG.md  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: API.md  GETTING_STARTED.md  REGISTRY.md  THREAT_MODEL.md  WHITEPAPER.md
examples/: README.md  basic-usage.ts
python/: pyproject.toml
python/soul_protocol/: __init__.py  client.py  types.py
scripts/: register-nexus.ts
src/: cli.ts  client.ts  crypto.test.ts  crypto.ts  index.ts  registry.ts  server.ts  soul.test.ts  soul.ts  types.ts
website/: index.html
